--- a/_posts/2020-05-30-data100.md
+++ b/_posts/2020-05-30-data100.md
@@ -3,6 +3,7 @@ layout: post
 title: Wicked Problems
 subtitle: DATA 100
 cover-img: /assets/img/path.jpg
+tags: teaching
 ---
 
 # Course Description
