--- a/_posts/2020-05-30-data150.md
+++ b/_posts/2020-05-30-data150.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Evolving Solutions
+title: Human Development and Data Science
 subtitle: DATA 150
 cover-img: /assets/img/path.jpg
 ---
